crates/tyrano-syntax/tests/data/valid/blocks.ks
[iscript]
var a = 1;
f.name = "あかね";
[endscript]
[html]
<b>太字</b>
[endhtml]
