crates/tyrano-syntax/tests/data/invalid/loose_endscript.ks
[iscript]
var s = "endscript";
[s]
